fix(styling): Fix issue with overflowing particles.js canvas element

--- a/static/styles/_layout.scss
+++ b/static/styles/_layout.scss
@@ -56,10 +56,9 @@ main {
 
 .particles-js-canvas-el {
     position: fixed;
-    max-width: 100%;
     overflow: hidden;
-    width: 100%;
-    height: 100%;
+    width: 100svw;
+    height: 100svh;
     z-index: -1;
     top: 0;
     left: 0;
